# Gr2_Pro25

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.save  Doxyfile.save.1  LOGGING.md  README.md  app.py  docker-compose.yml  docker_state_backup.json  example_modbus_logging.cpp  health  health.cpp  main.py  measurements_export.csv  platformio.ini  requirements.txt  restore_env.sh  show_logs.sh  start_all.sh  start_clean.sh  stop_all.sh  subscriber.py  system_flow.dot  systemlog.txt  tjek_temp  tjek_temp.cpp  watchdog.sh
.github/workflows/: doxygen.yml  pio.yml
api/: Dockerfile  main.py  mqtt_handler.py
dashboard/: Dockerfile.dashboard  app.py  requirements.txt
docs/: Doxyfile  mainpage.md  ventilation_project.tag
docs/html/: README_8md.html  android__sink_8h.html  android__sink_8h_source.html  annotated.html  annotated_dup.js  ansicolor__sink-inl_8h.html  ansicolor__sink-inl_8h__dep__incl.map  ansicolor__sink-inl_8h__dep__incl.md5  ansicolor__sink-inl_8h__incl.map  app_8py.html  (+2381 more)
glances-venv/: pyvenv.cfg
include/: db_handler.hpp  logging.hpp  mqtt_client.hpp  sensor_handler.hpp
integrations/questdb/: CMakeLists.txt  Dockerfile  Doxyfile  docker-compose.yml  questdb_test.cpp  test_fastapi.sh  test_insert.sh  test_persistence.sh
integrations/questdb/app/: main.py
mqtt_json/: Makefile  mqtt_json_pub.cpp  mqtt_json_sub.cpp
src/: CMakeLists.txt  db_handler.cpp  main.cpp  mqtt_client.cpp  sensor_handler.cpp
subscriber/: Dockerfile  subscriber.py
tests/: CMakeLists.txt  test_db.cpp  test_mqtt.cpp  test_mqtt_loopback.cpp  test_sensor.cpp
(+189 files in other folders)
